--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "usehooks-ts": "^3.1.1",
